--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,13 @@
 {
-	"manifest_version": 2,
+	"manifest_version": 3,
 	"name": "Speedy Playback",
 	"version": "0.1",
-	"browser_action": {	
+	"action": {	
 		"default_popup": "popup.html",
 		"default_title": "Change play speed of current video."
 	},
 	"background": {
-		"scripts": ["background.js"],
-		"persistent": false
+		"service_worker": "./background.js"
 	},
 	"permissions": [
 		"activeTab",
@@ -35,5 +34,9 @@
 		"16": "icon-128x128.png",
 		"128": "icon-128x128.png",
 		"256": "icon-256x256.png"
+	},
+	// strongly recommend against doing this. These functions are notorious XSS attack vectors
+	"content_security_policy": {
+		"extension_page":"script-src 'self'; 'wasm-unsafe-eval'; object-src 'self';" 
 	}
 }
